# AlizaMS

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml
CG/: shaders.h
GUI/: graphicsutils.cpp  graphicswidget.cpp  hangingprotocol.cpp  hangingprotocol.h  processimagethreadLUT.hxx  studygraphicswidget.cpp
browser/: anonymazerwidget2.cpp  browserwidget2.cpp  sqtree.cpp
common/: annotationdb.cpp  annotationdb.h  auditlog.cpp  auditlog.h  authmanager.cpp  authmanager.h  codecutils.cpp  gsdf.cpp  gsdf.h  roistats.cpp  roistats.h  structures.h
dicom/: dicomdimse.cpp  dicomnetwork.cpp  dicomnetwork.h  dicomutils.cpp  suvutils.cpp  suvutils.h
docs/: CONFORMANCE.md
mdcm/Source/MediaStorageAndFileFormat/: mdcmLookupTable.cxx
tests/: CMakeLists.txt  test_buffer_sizes.cpp  test_dicom_parsing.cpp  test_gsdf.cpp  test_lut_pipeline.cpp  test_structures.cpp
translations/: README.md
